<resources>
    <string name="app_name">Raspberryhome</string>
    <string name="action_settings">Settings</string>
    <string name="DATA_FILENAME" translatable="false">data</string>
    <string name="save">save</string>
    <string name="command_title">title</string>
    <string name="m_path">m_path</string>
    <string name="command_delete">delete</string>
    <string name="editNotice">Long press on a button to edit</string>
    <string name="powerOffRaspberryPi">Power off Pi</string>
    <string name="command_button_on">on</string>
    <string name="command_button_off">off</string>
    <string name="password">Password</string>
    <string name="ip">IP-address</string>
    <string name="username">Username</string>
    <string name="ip_key" translatable="false">ip</string>
    <string name="username_key" translatable="false">username</string>
    <string name="password_key" translatable="false">password</string>
    <string name="theme_text">Use dark theme</string>
    <string name="dark_theme_key" translatable="false" >dark_theme</string>
    <string name="general_Category">General</string>
    <string name="Theme_Category">Theme</string>
    <string name="current_theme_key" translatable="false">current_theme</string>
    <string name="port_key" translatable="false">port</string>
    <string name="port">Port</string>
    <string name="path_text">The path to the send file</string>
    <string name="path_key" translatable="false">path</string>
    <string name="error_hostNotSet">IP address not set</string>
    <string name="error_usernameNotSet">Username not set</string>
    <string name="error_connectTimeout">Connection failed</string>
    <string name="turnPiOff">Turn Raspberry Pi off</string>
    <string name="welcome_dialog_title">Welcome</string>
    <string name="welcome_dialog_text">
        Welcome to this app!
        \n
        \nWith this app you can control remote outlets.
        \n
        \nTo use this app you need a Raspberry Pi with installed WiringPi and Raspberry-Remote, a 433 MHz sender and remote control outlets.
        \n
        \nSet the ip address, port, username and password in the settings.
        \n
        \nA detailed tutorial to set up the Raspberry Pi can be found in the menu.
        \n
        \nHave fun using the app! :-)
    </string>
    <string name="tutorial_dialog_title">Tutorial</string>
    <string name="tutorial_dialog_text">
        To use this app you need a Raspberry Pi with a 433 MHz sender and installed WiringPi and Raspberry-Remote.
        \nThe 433 MHz sender must be connected right. (search the internet how)
        \n
        \nRun the following commands on the Raspberry Pi:
        \nInstall git with the command:
        \nsudo apt-get install git-core
        \n
        \nInstall WiringPi with the command:
        \ngit clone git://git.drogon.net/wiringPi
        \ncd wiringPi
        \n./build
        \n
        \nInstall Raspberry-Remote with the command:
        \ncd ~
        \ngit clone git://github.com/xkonni/raspberry-remote.git
        \ncd raspberry-remote
        \nmake send
        \n
        \nThe default path to the send-file is already set in the settings.
        \n
        \nThat\'s it. Now add remote control outlets to the app.
        \nThe switches represents the switches on the remote control outlet.
        \n
        \nFor a more detailed tutorial search the internet for "Raspberry Pi remote control outlet wiringPi Raspberry-remote". There are videos! :-)
    </string>
    <string name="something_went_wrong">Something went wrong!</string>
</resources>
