<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_Category">

    </PreferenceCategory>
    <EditTextPreference
        android:defaultValue="192.168.178.43"
        android:key="@string/ip_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/ip" />
    <EditTextPreference
        android:defaultValue="pi"
        android:key="@string/username_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/username" />
    <EditTextPreference
        android:defaultValue="Roter!Weg!3"
        android:key="@string/password_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/password" />
    <PreferenceCategory android:title="@string/Theme_Category">

    </PreferenceCategory>
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/dark_theme_key"
        android:title="@string/theme_text" />
</PreferenceScreen>